Changed movement method

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -526,6 +526,18 @@ PUPISettings_C.ComponentReplication=True
 PUPISettings_C.Activation=True
 PUPISettings_C.Cooking=True
 PUPISettings_C.Events=True
+WorldSettings.World=True
+WorldSettings.GameMode=True
+WorldSettings.Lightmass=True
+WorldSettings.Physics=True
+WorldSettings.Rendering=True
+WorldSettings.PrecomputedVisibility=True
+WorldSettings.Audio=True
+WorldSettings.LODSystem=True
+WorldSettings.VR=True
+WorldSettings.Tick=True
+BoolProperty.Variable=True
+BoolProperty.DefaultValueCategory=True
 
 [DetailPropertyExpansion]
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -538,7 +550,7 @@ ActorComponent="\"Object.Default.MainSettings\" \"Object.Default.PickUpSettings\
 Object="\"Object.Default.MainSettings\" \"Object.Default.PickUpSettings\" \"Object.Default.InspectSettings\" "
 
 [MessageLog]
-LastLogListing=LightingResults
+LastLogListing=MapCheck
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
